# qbittorrent-portable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.bat  appveyor.yml  build.sh  dir.h  gen_code.sh  hijack.h  hook_knowndir.h  iphlpapi.c  iphlpapi.h  native.h  test.c  version.c  version.h  winmm.c  winmm.h
.github/workflows/: cmake.yml
